Updated css in order to not have overlapping searchfield and bradcrumbs. I do not really like it though... but at least usable. Probably someone else now has some other issues...

--- a/miroutes/static/miroutes/css/main3.css
+++ b/miroutes/static/miroutes/css/main3.css
@@ -78,13 +78,11 @@ body {
 }
 
 #search-container {
-    position: absolute;
-    float: left;
     width: 250px;
     z-index: 50;
     border-radius: 10px;
     margin-top: 5px;
-    margin-left: 5px;
+    margin-left: 20px;
 }
 
 #search-field {
@@ -102,7 +100,8 @@ body {
 }
 
 #breadcrumbs {
-    padding-top: 8px;
+    margin-left: 20px;
+    padding: 8px 0px;
 }
 
 #login-menu {
@@ -115,6 +114,8 @@ body {
 
 .breadcrumb {
     display: inline-block;
+    padding: 0px 8px;
+    margin-bottom: 0px;
 }
 
 .btn {
